buildscript {
	ext {
		rootGradleDir = "${rootProject.rootDir}/gradle"
	}
}

plugins {
	id "com.vanniktech.maven.publish" version "0.36.0"
}

apply plugin:'java'
apply plugin:'groovy'
apply plugin:'idea'
apply plugin:'application'
apply plugin:'signing'

group = "com.github.hschneid"
version = '0.7.6-RELEASE'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}
 
repositories {
    mavenCentral()
}

// In this section you declare the dependencies for your production and test code
dependencies {
	// Fancy collection
	implementation 'com.google.guava:guava:33.0.0-jre'

	testImplementation "org.spockframework:spock-core:2.4-M5-groovy-4.0"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
	useJUnitPlatform()
}

// Maven - Publish
mavenPublishing {
	publishToMavenCentral()

	signAllPublications()

	coordinates(group.toString(), name.toString(), version.toString())

	pom {
		name = "XFLP"
		description = "Solver for realistic 3D container loading"
		inceptionYear = "2020"
		url = "https://github.com/hschneid/xflp/"
		licenses {
			license {
				name = "MIT Licence"
				url = "http://www.opensource.org/licenses/mit-license.php"
				distribution = "http://www.opensource.org/licenses/mit-license.php"
			}
		}
		developers {
			developer {
				id = "hschneid"
				name = "Holger Schneider"
				url = "https://github.com/hschneid/"
			}
		}
		scm {
			url = "https://github.com/username/mylibrary/"
			connection = "scm:git:git://github.com/hschneid/xflp.git"
			developerConnection = "scm:git:ssh://git@github.com/hschneid/xflp.git"
		}
	}
}
